# talk_robots

./: README.md  frames.gv
devel/: .catkin  .rosinstall  local_setup.sh  setup.sh
devel/include/aruco_ros/: ArucoThresholdConfig.h
devel/include/control_ur5/: FilterScene.h  FilterSceneRequest.h  FilterSceneResponse.h
devel/include/moveit_task_constructor_gpd/: PointCloud.h  PointCloudRequest.h  PointCloudResponse.h
devel/include/ur5_simulation/: GetPosition.h  GetPositionRequest.h  GetPositionResponse.h  Tracker.h
devel/lib/aruco_ros/: double  marker_publisher  single
devel/lib/control_ur5/: blocks_spawner  filter_octomap.py  moveit_pick_place  node
devel/lib/darknet_ros/: darknet_ros
devel/lib/explore_lite/: explore
devel/lib/find_object_2d/: find_object_2d  tf_example
devel/lib/intera_examples/: fk_service_client.py  go_to_cartesian_pose.py  go_to_joint_angles_in_contact.py  gripper_cuff_control.py  head_display_image.py  ik_service_client.py  joint_position_joystick.py  joint_position_keyboard.py  joint_recorder.py  joint_torque_springs.py  joint_trajectory_file_playback.py  joint_velocity_wobbler.py  lights_blink.py  navigator_io.py  send_traj_from_file.py
devel/lib/intera_interface/: calibrate_arm.py  io_config_editor.py  joint_trajectory_action_server.py
devel/lib/multirobot_map_merge/: map_merge
devel/lib/opencv_services/: opencv_extract_object_positions
devel/lib/p3dx_navigation/: sendPose
devel/lib/pkgconfig/: aruco.pc  aruco_msgs.pc  aruco_ros.pc  common_sensors.pc  control_ur5.pc  conveyor_pkg.pc  darknet_ros.pc  darknet_ros_msgs.pc  deep_grasp_task.pc  explore_lite.pc  find_object_2d.pc  follow_waypoints.pc  gazebo_conveyor.pc  gpd_ros.pc  intera_core_msgs.pc  intera_examples.pc  intera_interface.pc  intera_motion_msgs.pc  intera_tools_description.pc  mecanum_gazebo_plugin.pc  moveit_task_constructor_gpd.pc  multi_ridgeback_gazebo.pc  multi_ridgeback_nav.pc  multirobot_map_merge.pc  nuridgeback_bringup.pc  nuridgeback_description.pc  nuridgeback_gazebo.pc  nuridgeback_robot.pc  object_detection_with_intel_D415.pc  opencv_services.pc  p3dx_control.pc  p3dx_description.pc  p3dx_gazebo.pc  p3dx_navigation.pc  p3dx_viz.pc  pick_and_place_node.pc  realsense2_description.pc  ridgeback_6_axis_kinova_moveit_config.pc  ridgeback_7_axis_kinova_moveit_config.pc  ridgeback_control.pc  (+61 more)
devel/lib/sns_ik_examples/: all_ik_tests
devel/lib/turtlebot3_bringup/: turtlebot3_diagnostics
devel/lib/turtlebot3_example/: turtlebot3_client  turtlebot3_cliff  turtlebot3_server
devel/lib/turtlebot3_fake/: turtlebot3_fake_node
devel/lib/turtlebot3_gazebo/: turtlebot3_drive
devel/lib/turtlebot3_slam/: flat_world_imu_node
devel/lib/ur5_notebook/: blocks_spawner
devel/lib/ur5_pick_and_place_opencv/: pick_and_place_opencv
devel/lib/ur5_simulation/: object_tracking  pick_and_place  pick_place_simple_client  tracker  tracker_executable  ur5_ik_test  ur5_pick_place
src/: .rosinstall  .rosinstall.bak
src/control_ur5/: CMakeLists.txt
src/control_ur5/scripts/: control_ur5_pick_place.py  filter_octomap.py  object_detection.py  object_detection_node.py  pick_and_place.py
src/control_ur5/src/: moveit_pick_place.cpp
src/conveyor_pkg/: CMakeLists.txt
src/conveyor_pkg/config/: conveyor.yaml
src/conveyor_pkg/launch/: conveyor_start_control.launch  main.launch  spawn_conveyor.launch  spawn_friction_test_object.launch
src/conveyor_pkg/urdf/: conveyor.urdf.xacro
src/conveyor_pkg/worlds/: conveyor.world
src/sawback_moveit_config/: .setup_assistant  CMakeLists.txt
src/sawback_moveit_config/config/: fake_controllers.yaml  gazebo_sawback.urdf  ompl_planning.yaml  ros_controllers.yaml  sawback.srdf  stomp_planning.yaml
src/sawback_moveit_config/launch/: chomp_planning_pipeline.launch.xml  default_warehouse_db.launch  demo.launch  fake_moveit_controller_manager.launch.xml  gazebo.launch  move_group.launch  planning_context.launch  (+9 more)
src/sawback_simulation/: CMakeLists.txt
src/sawyer_robot_config/: .setup_assistant  CMakeLists.txt  package.xml
src/talk_robotics/: CMakeLists.txt  package.xml
src/ur5_gripper_moveit_config/: .setup_assistant
src/ur5_simulation/: CMakeLists.txt
src/ur5_simulation/config/: ur5_gripper_controllers.yaml
src/ur5_simulation/include/ur5_simulation/: tracker.h
src/ur5_simulation/launch/: conveyor.launch  fin_object_3d.launch  ur5_sim.launch
src/ur5_simulation/scripts/: color_threshold.py  execute_motion.py  get_hsv_click.py  get_position_server.py  lib.py  pick_place.py  stream_camera.py  track_box.py  tracker.py  tracker_3d.py  ur5_mp.py  ur5_vision.py  write_camera.py
src/ur5_simulation/src/: object_tracking.cpp  pick_place_simple_client.cpp  tracker.cpp  ur5_ik_test.cpp  ur5_pick_place.cpp
src/ur5_simulation/urdf/: green_box.urdf
(+253 files in other folders)
